@@ -806,6 +806,13 @@ file. See the
 .B JIGDO NOTES
 section below for more information.
 .TP
+.BI \-jigdo\-template\-compress " algorithm
+Specify a compression algorithm to use for template date. gzip and
+bzip2 are currently supported, and gzip is the default. See the
+.B JIGDO NOTES
+section below for more information.
+.TP
+.TP
 .BI \-log\-file " log_file"
 Redirect all error, warning and informational messages to
 .I log_file
